--- a/detail.html
+++ b/detail.html
@@ -20,12 +20,34 @@
 	
 		<h1>Details</h1><br><br>
 		<form action="crop.html">
-			<p>Location</p>
-			<input type="text" name="text" placeholder="Enter your location">
+			<p>State</p>
+			<select>
+    <option value="0">Select state:</option>
+    <option value="1">Maharashtra</option>
+    <option value="2">Rajasthan</option>
+    		</select>
+			<p>District</p>
+			<select>
+    <option value="0">Select District:</option>
+    <option value="1">Pune</option>
+    <option value="2">Nagpur</option>
+    		</select>
+			<p>Taluka</p>
+			<select>
+    <option value="0">Select Taluka:</option>
+    <option value="1">Mulshi</option>
+    <option value="2">Haveli</option>
+    		</select>
+    		<p>Village</p>
+			<select>
+    <option value="0">Select village:</option>
+    <option value="1">Hinjewadi</option>
+    <option value="2">pirangut</option>
+    		</select>
 			<p>pH Value</p>
 			<input type="number" name="text" placeholder="Enter soil pH Value" step="0.01">
 			<p>Nitrogen Value(N)</p>
-			<input type="number" name="" placeholder="Enter Nitogen Value" step="0.01">
+			<input type="number" name="" placeholder="Enter Nitogen Value()" step="0.01">
 			<p>Phosphorous Value(P)</p>
 			<input type="number" name="" placeholder="Enter Phosphorous Value" step="0.01">
 			<p>Potassium Value(K)</p>
