--- a/detail.html
+++ b/detail.html
@@ -10,7 +10,10 @@
 			<img src="croplogo2.png"><h2><a href="home.html">SEEDO</a></h2>
 			</div>
 		<ul class="main-nav">
-			
+			<li class="active"><a href="home.html">Home</a></li>
+			<li><a href="css3-timeline/index.html">Timeline</a></li>
+			<li><a href="#">Contact Us</a></li>
+			<li><a href="#">Profile</a></li>
 			
 		</ul>
 		</div>
