--- a/css3-timeline/index.html
+++ b/css3-timeline/index.html
@@ -11,12 +11,52 @@
 @import url(http://fonts.googleapis.com/css?family=Noto+Sans);
 body {
   max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 5%;
+  margin: -3% 0% 0% 0%;
+  padding: 0% 0% 0% 0%;
   font-size: 100%;
   font-family: 'Source Sans Pro',Helvetica Neue,Helvetica,Arial,sans-serif;
   color: black;
   background: white;
+}
+.main-nav
+{
+  float: right;
+  list-style: none;
+  margin-top: 30px;
+}
+.main-nav li
+{
+  display: inline-block;
+}
+.main-nav li a
+{
+  color: black;
+  text-decoration: none;
+  padding: 5px 20px;
+  font-family: 'Source Sans Pro',Helvetica Neue,Helvetica,Arial,sans-serif;
+  font-size: 15px;
+}
+.main-nav li a:hover
+{
+  border: 1px solid black;
+}
+.logo img
+{
+  margin-top: 10px;
+  width: 100px;
+  height: auto;
+  float: left;
+}
+h2 a
+{
+  font-family: 'Source Sans Pro',Helvetica Neue,Helvetica,Arial,sans-serif;
+  text-decoration: none;
+  font-size: 40px;
+  float: left;
+  color: black;
+  margin-top: 2%;
+  margin-left: -1%;
+
 }
 
 h2 {
@@ -196,6 +236,9 @@ label {
 .timeline1
 {
   height: 100%;
+  width: 100%;
+  margin-left: 3%;
+
 }
 
     </style>
@@ -205,8 +248,19 @@ label {
 </head>
 
 <body>
-  <h2>SUGARCANE<input type="image" src="phone.png" alt="Submit" width="48" height="48" style="margin-left: 80% "></h2>
-<p>(Day 0 is your Planting Day)</p>
+  <div class="row">
+      <div class="logo">
+      <img src="croplogo2.png"><h2><a href="/Users/jaykumar/Desktop/tan/seedo/home.html">SEEDO</a></h2>
+      </div>
+    <ul class="main-nav">
+      <li class="active"><a href="/Users/jaykumar/Desktop/tan/seedo/home.html">Home</a></li>
+      <li><a href="index.html">Timeline</a></li>
+      <li><a href="#">Contact Us</a></li>
+      <li><a href="#">Profile</a></li>
+      
+    </ul>
+    </div><br><br>
+  <h2 style="margin-left: 10%">SUGARCANE<input type="image" src="phone.png" alt="Submit" width="48" height="48" style="margin-left: 80% "></h2>
 <div class="timeline1">
 <ul id='timeline'>
   <li class='work'>
