--- a/crop.html
+++ b/crop.html
@@ -9,7 +9,13 @@
 			<div class="logo">
 			<img src="croplogo2.png"><h2><a href="home.html">SEEDO</a></h2>
 			</div>
-		
+		<ul class="main-nav">
+			<li class="active"><a href="home.html">Home</a></li>
+			<li><a href="css3-timeline/index.html">Timeline</a></li>
+			<li><a href="#">Contact Us</a></li>
+			<li><a href="#">Profile</a></li>
+			
+		</ul>
 		</div>
 		<div class="a1">
 	<h1 align="center" style="margin-top: 2%; color: black; font-size: 40px; font-family: 'Source Sans Pro',Helvetica Neue,Helvetica,Arial,sans-serif;">Select one crop</h1>
