--- a/css3-timeline/index.html
+++ b/css3-timeline/index.html
@@ -264,9 +264,9 @@ label {
 <div class="timeline1">
 <ul id='timeline'>
   <li class='work'>
-    <input class='radio' id='work20' name='works' type='radio' checked>
+    <input class='radio' id='work28' name='works' type='radio' checked>
     <div class="relative">
-      <label for='work20'>22-February-2020</label>
+      <label for='work28'>22-February-2020</label>
       <span class='date'>Day -4</span>
       <span class='circle'></span>
     </div>
@@ -279,9 +279,9 @@ label {
     </div>
   </li>
   <li class='work'>
-    <input class='radio' id='work19' name='works' type='radio'>
+    <input class='radio' id='work27' name='works' type='radio'>
     <div class="relative">
-      <label for='work19'>23-February-2020</label>
+      <label for='work27'>23-February-2020</label>
       <span class='date'>Day -3</span>
       <span class='circle'></span>
     </div>
@@ -300,9 +300,9 @@ label {
     </div>
   </li>
   <li class='work'>
-    <input class='radio' id='work18' name='works' type='radio'>
+    <input class='radio' id='work26' name='works' type='radio'>
     <div class="relative">
-      <label for='work18'>24-February-2020</label>
+      <label for='work26'>24-February-2020</label>
       <span class='date'>Day -2</span>
       <span class='circle'></span>
     </div>
@@ -316,9 +316,9 @@ label {
     </div>
   </li>
   <li class='work'>
-    <input class='radio' id='work17' name='works' type='radio'>
+    <input class='radio' id='work25' name='works' type='radio'>
     <div class="relative">
-      <label for='work17'>25-February-2020</label>
+      <label for='work25'>25-February-2020</label>
       <span class='date'>Day -1</span>
       <span class='circle'></span>
     </div>
@@ -332,9 +332,9 @@ label {
     </div>
   </li>
   <li class='work'>
-    <input class='radio' id='work16' name='works' type='radio'>
+    <input class='radio' id='work24' name='works' type='radio'>
     <div class="relative">
-      <label for='work16'>26-February-2020</label>
+      <label for='work24'>26-February-2020</label>
       <span class='date'>Day 0</span>
       <span class='circle'></span>
     </div>
@@ -349,9 +349,9 @@ label {
     </div>
   </li>
   <li class='work'>
-    <input class='radio' id='work15' name='works' type='radio'>
+    <input class='radio' id='work23' name='works' type='radio'>
     <div class="relative">
-      <label for='work15'>28-February-2020</label>
+      <label for='work23'>28-February-2020</label>
       <span class='date'>Day 2</span>
       <span class='circle'></span>
     </div>
@@ -365,9 +365,9 @@ label {
     </div>
   </li>
   <li class='work'>
-    <input class='radio' id='work14' name='works' type='radio'>
+    <input class='radio' id='work22' name='works' type='radio'>
     <div class="relative">
-      <label for='work14'>01-March-2020</label>
+      <label for='work22'>01-March-2020</label>
       <span class='date'>Day 4</span>
       <span class='circle'></span>
     </div>
@@ -381,9 +381,9 @@ label {
     </div>
   </li>
   <li class='work'>
-    <input class='radio' id='work13' name='works' type='radio'>
+    <input class='radio' id='work21' name='works' type='radio'>
     <div class="relative">
-      <label for='work13'>15-March-2020</label>
+      <label for='work21'>15-March-2020</label>
       <span class='date'>Day 18</span>
       <span class='circle'></span>
     </div>
@@ -397,9 +397,9 @@ label {
     </div>
   </li>
   <li class='work'>
-    <input class='radio' id='work12' name='works' type='radio'>
+    <input class='radio' id='work20' name='works' type='radio'>
     <div class="relative">
-      <label for='work12'>22-March-2020</label>
+      <label for='work20'>22-March-2020</label>
       <span class='date'>Day 25</span>
       <span class='circle'></span>
     </div>
@@ -414,9 +414,9 @@ label {
   </li>
 
   <li class='work'>
-    <input class='radio' id='work11' name='works' type='radio'>
+    <input class='radio' id='work19' name='works' type='radio'>
     <div class="relative">
-      <label for='work11'>27-March-2020</label>
+      <label for='work19'>27-March-2020</label>
       <span class='date'>Day 30</span>
       <span class='circle'></span>
     </div>
@@ -431,9 +431,9 @@ label {
     </div>
   </li>
     <li class='work'>
-    <input class='radio' id='work10' name='works' type='radio'>
+    <input class='radio' id='work18' name='works' type='radio'>
     <div class="relative">
-      <label for='work10'>01-April-2020</label>
+      <label for='work18'>01-April-2020</label>
       <span class='date'>Day 35</span>
       <span class='circle'></span>
     </div>
@@ -447,10 +447,43 @@ To prevent attack by early shoot borer, apply chlorpyrifos @ 250-300 g a.i./ ha 
       </p>
     </div>
   </li>
-    <li class='work'>
-    <input class='radio' id='work9' name='works' type='radio'>
+  <li class='work'>
+    <input class='radio' id='work17' name='works' type='radio'>
     <div class="relative">
-      <label for='work9'>11-April-2020</label>
+      <label for='work17'>07-April-2020</label>
+      <span class='date'>Day 41</span>
+      <span class='circle'></span>
+    </div>
+    <div class='content'>
+      <p style="color: black">
+      Irrigate (Sprinkler irrigation is the suitable method to satisfy the requirement, during initial stages.) 2-3 cm depth<br>
+      <input type="image" src="check.png" alt="Submit" width="48" height="48">
+      <input type="image" src="cross.png" alt="Submit" width="48" height="48">
+      </p>
+    </div>
+  </li>
+  <li class='work'>
+    <input class='radio' id='work16' name='works' type='radio'>
+    <div class="relative">
+      <label for='work16'>08-April-2020</label>
+      <span class='date'>Day 42</span>
+      <span class='circle'></span>
+    </div>
+    <div class='content'>
+      <p style="color: black">
+      <strong style="color: red">1</strong>.Does any Sugarcane affected by grassy shoot? <button style="background-color: green">yes</button><button style="background-color: red">no</button>
+<br><strong style="color: red">2</strong>.What is the color of grass now?<br>
+  <button class="button" style="background-color: #568540; width: 26px;height: 26px;"></button>
+  <button class="button" style="background-color: #AABF13; width: 26px;height: 26px;"></button>
+  <button class="button" style="background-color: #D6C372; width: 26px;height: 26px;"></button>
+  <button class="button" style="background-color: #6EC446; width: 26px;height: 26px;"></button>
+      </p>
+    </div>
+  </li>
+    <li class='work'>
+    <input class='radio' id='work15' name='works' type='radio'>
+    <div class="relative">
+      <label for='work15'>11-April-2020</label>
       <span class='date'>Day 45</span>
       <span class='circle'></span>
     </div>
@@ -463,10 +496,40 @@ To prevent attack by early shoot borer, apply chlorpyrifos @ 250-300 g a.i./ ha 
       </p>
     </div>
   </li>
-    <li class='work'>
-    <input class='radio' id='work8' name='works' type='radio'>
+  <li class='work'>
+    <input class='radio' id='work14' name='works' type='radio'>
     <div class="relative">
-      <label for='work8'>26-April-2020</label>
+      <label for='work14'>14-April-2020</label>
+      <span class='date'>Day 48</span>
+      <span class='circle'></span>
+    </div>
+    <div class='content'>
+      <p style="color: black">
+      Irrigate 2-3 cm depth<br>
+      <input type="image" src="check.png" alt="Submit" width="48" height="48">
+      <input type="image" src="cross.png" alt="Submit" width="48" height="48">
+      </p>
+    </div>
+  </li>
+  <li class='work'>
+    <input class='radio' id='work13' name='works' type='radio'>
+    <div class="relative">
+      <label for='work13'>21-April-2020</label>
+      <span class='date'>Day 55</span>
+      <span class='circle'></span>
+    </div>
+    <div class='content'>
+      <p style="color: black">
+      Irrigate 2-3 cm depth<br>
+      <input type="image" src="check.png" alt="Submit" width="48" height="48">
+      <input type="image" src="cross.png" alt="Submit" width="48" height="48">
+      </p>
+    </div>
+  </li>
+    <li class='work'>
+    <input class='radio' id='work12' name='works' type='radio'>
+    <div class="relative">
+      <label for='work12'>26-April-2020</label>
       <span class='date'>Day 60</span>
       <span class='circle'></span>
     </div>
@@ -480,10 +543,55 @@ To prevent attack by early shoot borer, apply chlorpyrifos @ 250-300 g a.i./ ha 
       </p>
     </div>
   </li>
-    <li class='work'>
-    <input class='radio' id='work7' name='works' type='radio'>
+  <li class='work'>
+    <input class='radio' id='work11' name='works' type='radio'>
     <div class="relative">
-      <label for='work7'>26-May-2020</label>
+      <label for='work11'>28-April-2020</label>
+      <span class='date'>Day 62</span>
+      <span class='circle'></span>
+    </div>
+    <div class='content'>
+      <p style="color: black">
+      Irrigate 2-3 cm depth<br>
+      <input type="image" src="check.png" alt="Submit" width="48" height="48">
+      <input type="image" src="cross.png" alt="Submit" width="48" height="48">
+      </p>
+    </div>
+  </li>
+  <li class='work'>
+    <input class='radio' id='work10' name='works' type='radio'>
+    <div class="relative">
+      <label for='work10'>05-May-2020</label>
+      <span class='date'>Day 69</span>
+      <span class='circle'></span>
+    </div>
+    <div class='content'>
+      <p style="color: black">
+      Irrigate 2-3 cm depth<br>
+      <input type="image" src="check.png" alt="Submit" width="48" height="48">
+      <input type="image" src="cross.png" alt="Submit" width="48" height="48">
+      </p>
+    </div>
+  </li>
+  <li class='work'>
+    <input class='radio' id='work9' name='works' type='radio'>
+    <div class="relative">
+      <label for='work9'>12-May-2020</label>
+      <span class='date'>Day 76</span>
+      <span class='circle'></span>
+    </div>
+    <div class='content'>
+      <p style="color: black">
+      Irrigate 2-3 cm depth<br>
+      <input type="image" src="check.png" alt="Submit" width="48" height="48">
+      <input type="image" src="cross.png" alt="Submit" width="48" height="48">
+      </p>
+    </div>
+  </li>
+    <li class='work'>
+    <input class='radio' id='work8' name='works' type='radio'>
+    <div class="relative">
+      <label for='work8'>26-May-2020</label>
       <span class='date'>Day 90</span>
       <span class='circle'></span>
     </div>
@@ -493,6 +601,34 @@ To prevent attack by early shoot borer, apply chlorpyrifos @ 250-300 g a.i./ ha 
 <br>
       <input type="image" src="check.png" alt="Submit" width="48" height="48">
       <input type="image" src="cross.png" alt="Submit" width="48" height="48">
+      </p>
+    </div>
+  </li>
+   <li class='work'>
+    <input class='radio' id='work7' name='works' type='radio'>
+    <div class="relative">
+      <label for='work7'>20-June-2020</label>
+      <span class='date'>Day 113</span>
+      <span class='circle'></span>
+    </div>
+    <div class='content'>
+      <p style="color: black">
+      <strong style="color: red">1</strong>.which symptoms did you notice till now? <input type="checkbox" name="">red rot<input type="checkbox" name="">Grassy Shoot<input type="checkbox" name="">Leaf Spot<input type="checkbox" name="">sett rot
+<br><strong style="color: red">2</strong>.What is the color of grass now?<br>
+  <button class="button" style="background-color: #568540; width: 26px;height: 26px;"></button>
+  <button class="button" style="background-color: #AABF13; width: 26px;height: 26px;"></button>
+  <button class="button" style="background-color: #D6C372; width: 26px;height: 26px;"></button>
+  <button class="button" style="background-color: #6EC446; width: 26px;height: 26px;"></button>
+  <button class="button" style="background-color: #E6FF5B; width: 26px;height: 26px;"></button>
+<br><strong style="color: red">3</strong>.What is the color of internode now?<br>
+  <button class="button" style="background-color: #568540; width: 26px;height: 26px;"></button>
+  <button class="button" style="background-color: #AABF13; width: 26px;height: 26px;"></button>
+  <button class="button" style="background-color: #AE451B; width: 26px;height: 26px;"></button>
+  <button class="button" style="background-color: #6EC446; width: 26px;height: 26px;"></button>
+  <button class="button" style="background-color: #E6FF5B; width: 26px;height: 26px;"></button>
+  <button class="button" style="background-color: #63250C; width: 26px;height: 26px;"></button>
+<br><strong style="color: red">4</strong>.What is the height of sugarcane now? <input type="number" name=""><br>
+<strong style="color: red">5</strong>.Is there any Drought condition? <button style="background-color: green">yes</button><button style="background-color: red">no</button>
       </p>
     </div>
   </li>
