--- a/home1.html
+++ b/home1.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
 	<style>
 .material-icons {vertical-align:-14%; font-size: 80px;}
-.croplist button{border-radius:50%;margin: 15% 40% 25% 40%; padding: 0% 0% 0% 0%;}
+.croplist button{border-radius:50%;margin: 15% 40% 25% 40%; padding: 0% 0% 0% 0%; cursor: pointer;}
 .w3-container {margin-top: auto;}
 </style>
 </head>
@@ -27,14 +27,17 @@
 		</div>
 		<div class="a1">
 		<div class="btngrp" align="center">
-		<a href="css3-timeline/index.html" style="text-decoration: none;">
 			<div class="croplist">
 				<h1>FARM 1</h1>
 				<div class="crop_name">Crop: Sugarcane</div>
 				<div class="location">Village: Hinjewadi, Taluka: Mulshi,<br> District: Pune, State: Maharashtra</div>
 				<div class="starting_date">Starting Date: <b>22 February 2020</b></div>
 				<div class="Harvest_date">Expected Harvesting Date: <b>25 February 2021</b></div>
-											</div></a>
+				<div><a href="css3-timeline/index.html" class="button_farm">Timeline</a>
+				<a href="#" class="button_farm">History</a></div>
+											</div>
+			
+			
 			
 		<div class="croplist" id="add_farm">
 			<h1>Add Farm</h1>
