--- a/detail.html
+++ b/detail.html
@@ -11,9 +11,10 @@
 			</div>
 		<ul class="main-nav">
 			<li class="active"><a href="home.html">Home</a></li>
-			<li><a href="css3-timeline/index.html">Timeline</a></li>
+			<li><a href="home1.html">Dashboard</a></li>
 			<li><a href="#">Contact Us</a></li>
-			<li><a href="#">Profile</a></li>
+			<li><a href="aboutus.html">About Us</a></li>
+			<li><a href="profile.html">Profile</a></li>
 			
 		</ul>
 		</div>
