--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>details</title>
+	<title>homepage</title>
 	<link rel="stylesheet" type="text/css" href="home.css">
 	<link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One|Source+Sans+Pro:400" rel="stylesheet">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -8,7 +8,7 @@
 	<style>
 .material-icons {vertical-align:-14%; font-size: 80px;}
 .loginbox button{margin-left: 44%;border-radius: 50%;}
-.w3-container {margin-top: 30%}
+.w3-container {margin-top: 10%}
 </style>
 </head>
 <body>
@@ -18,39 +18,35 @@
 			</div>
 		<ul class="main-nav">
 			<li><a href="login2.html">Login</a></li>
-			<li class="active"><a href="home.html">Home</a></li>
-			<li><a href="css3-timeline/index.html">Timeline</a></li>
+			<li><a href="home1.html">Dashboard</a></li>
 			<li><a href="#">Contact Us</a></li>
-			<li><a href="#">Profile</a></li>
+			<li><a href="aboutus.html">About Us</a></li>
+			<li><a href="profile.html">Profile</a></li>
 			
 		</ul>
 		</div>
+<br>
+	<div class="Homeline">
+<p>T<b>he main objectives of this platform are :</b></p><br>
+		<ol>
+  <li>Increase the yeild of crops.</li>
+  <li>To provide a systematic and dynamic<br>
+  timeline to farmer.</li>
+  <li>To prevent disease occuring in plants<br> 
+  and provide solution if it occurs.</li>
+  <li>To optimize the process of irrigation.</li>
+  <li>Suggest the best possible plant <br>
+  to grow in given conditions.</li>
+</ol> 
 
-		<div class="loginbox">
-	<img src="turban.jpg" class="user">
-	
-		<h1 style="margin-top: 5%;">Add Farm</h1><br><br>
-		<form action="detail.html">
-			<button><i class="material-icons">add_circle</i></button>
-		</form>
-			</div>
-			<br>
-			<section class="w3-container w3-center w3-content" style="max-width:70%">
-  <h2 class="w3-wide">SEEDO</h2>
-  <p class="w3-opacity"><i>About Us</i></p><br>
-			<p class="w3-justify">The main objectives of this platform are to increase the yield of crops resulting in increased
-profits, optimizing irrigation and hence saving water.<br>
-The first step is to register yourself by entering your basic details. Click on the + button to
-add your farm. After entering all the basic details, you will be directed to module 1.<br><br>
-This platform is divided into 2 modules:<br><br>
-1) In the first module, user is expected to enter details like the soil pH, N, P, K values of his
-soil, Location, etc. After entering these values our system would suggest the top 3 best
-suitable crop which would give maximum yield in the entered conditions.
-The user has to Select one crop out of the three.<br><br>
-2) After selecting a crop, our system will display tasks to be performed on a day-to-day
-basis. It starts from Land Preparation to Harvesting. User has to update the system
-whether he has completed the task or not, according to the input the system will assign
-further tasks.</p>
+		</div>
+
+	<div class="landimg">
+		<img src="watering_plant.svg">
+	</div>	
+			
+
+
 
 	
 </body>
