--- a/home1.html
+++ b/home1.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>homepage</title>
+	<title>Dashboard</title>
 	<link rel="stylesheet" type="text/css" href="home1.css">
 	<link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One|Source+Sans+Pro:400" rel="stylesheet">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -40,9 +40,10 @@ window.onclick = function(event) {
 		<ul class="main-nav">
 		
 			<li class="active"><a href="home.html">Home</a></li>
-			<li><a href="css3-timeline/index.html">Timeline</a></li>
+			<li><a href="home1.html">Dashboard</a></li>
 			<li><a href="#">Contact Us</a></li>
-			<li><a href="#">Profile</a></li>
+			<li><a href="aboutus.html">About Us</a></li>
+			<li><a href="profile.html">Profile</a></li>
 			
 		</ul>
 		</div>
@@ -59,7 +60,7 @@ window.onclick = function(event) {
 				<div class="Harvest_date">Expected Harvesting Date: <b>25 February 2021</b></div>
 				<div><a href="css3-timeline/index.html" class="button_farm">Timeline</a>
 				<a href="#" class="button_farm">History</a>
-				<a class="diseasebtn" onclick="document.getElementById('id01').style.display='block'">Report Disease</a></div>
+				<a class="diseasebtn" href="disease.html">Report Disease</a></div>
 
 
 											</div>
@@ -74,54 +75,6 @@ window.onclick = function(event) {
 	</div>
 </div>
 
-<div id="id01" class="modal1">
-  <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">×</span>
-  <form class="modal-content">
-    <div class="container">
-      <p style="margin-bottom: 3%;">which symptoms did you notice till now?</p>
-    
-      <div class="clearfix">
-        <div class="mt-chip">
-  <input type="checkbox" class="mt-chip_input" name="size">
-  <svg class="mt-chip_checkmark" viewBox="-2 -3 30 30"><path class="mt-chip_checkmarkPath" fill="none" stroke="black" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path></svg>
-  <div class="mt-chip_chip">Red Rot</div>
-  <div class="mt-ripple"></div>
-</div>
-
-<div class="mt-chip">
-  <input type="checkbox" class="mt-chip_input" name="size">
-  <svg class="mt-chip_checkmark" viewBox="-2 -3 30 30"><path class="mt-chip_checkmarkPath" fill="none" stroke="black" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path></svg>
-  <div class="mt-chip_chip">Grassy Shoot</div>
-  <div class="mt-ripple"></div>
-</div>
-
-<div class="mt-chip">
-  <input type="checkbox" class="mt-chip_input" name="size">
-  <svg class="mt-chip_checkmark" viewBox="-2 -3 30 30"><path class="mt-chip_checkmarkPath" fill="none" stroke="black" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path></svg>
-  <div class="mt-chip_chip">Leaf Spot</div>
-  <div class="mt-ripple"></div>
-</div>
-
-<div class="mt-chip">
-  <input type="checkbox" class="mt-chip_input" name="size">
-  <svg class="mt-chip_checkmark" viewBox="-2 -3 30 30"><path class="mt-chip_checkmarkPath" fill="none" stroke="black" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path></svg>
-  <div class="mt-chip_chip">Sett Rot</div>
-  <div class="mt-ripple"></div>
-</div>
-
-<div class="mt-chip">
-  <input type="checkbox" class="mt-chip_input" name="size">
-  <svg class="mt-chip_checkmark" viewBox="-2 -3 30 30"><path class="mt-chip_checkmarkPath" fill="none" stroke="black" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path></svg>
-  <div class="mt-chip_chip">Yellow Leaf</div>
-  <div class="mt-ripple"></div>
-</div>
-
-<br>
-	</div>
-	<button type="button" onclick="document.getElementById('id01').style.display='none'" class="reportbtn">Report disease</button>
-    </div>
-  </form>
-</div>
 
 <div id="id02" class="modal1">
   <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Modal">×</span>
@@ -157,23 +110,7 @@ window.onclick = function(event) {
 </script>
 
 
-			<br>
-			<section class="w3-container w3-center w3-content" style="max-width:70%">
-  <h2 class="w3-wide">SEEDO</h2>
-  <p class="w3-opacity"><i>About Us</i></p><br>
-			<p class="w3-justify">The main objectives of this platform are to increase the yield of crops resulting in increased
-profits, optimizing irrigation and hence saving water.<br>
-The first step is to register yourself by entering your basic details. Click on the + button to
-add your farm. After entering all the basic details, you will be directed to module 1.<br><br>
-This platform is divided into 2 modules:<br><br>
-1) In the first module, user is expected to enter details like the soil pH, N, P, K values of his
-soil, Location, etc. After entering these values our system would suggest the top 3 best
-suitable crop which would give maximum yield in the entered conditions.
-The user has to Select one crop out of the three.<br><br>
-2) After selecting a crop, our system will display tasks to be performed on a day-to-day
-basis. It starts from Land Preparation to Harvesting. User has to update the system
-whether he has completed the task or not, according to the input the system will assign
-further tasks.</p>
+			
 
 	
 </body>
